--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "o-colors": "^3.3.1",
-    "o-grid": "^4.2.1"
+    "o-grid": "^4.2.1",
+    "o-buttons": "^4.4.2"
   }
 }
