--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "o-colors": "^3.3.1",
     "o-grid": "^4.2.1",
-    "o-buttons": "^4.4.2"
+    "o-buttons": "^4.4.2",
+    "o-card": "^2.2.3"
   }
 }
